--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.0",
+    "@angular/cdk": "~8.0.2",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
     "@angular/forms": "~8.0.0",
+    "@angular/material": "^8.0.2",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "json-server": "^0.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
